hphp/hack/test/typecheck/generics_restrictions/static_property_generic_bad.php.exp
File "static_property_generic_bad.php", line 5, characters 18-18:
A generic parameter cannot be used in the type of a static property (Typing[4279])
  File "static_property_generic_bad.php", line 5, characters 17-18:
  This is where the type of the static property was declared
  File "static_property_generic_bad.php", line 4, characters 7-7:
  This is the class containing the static property
File "static_property_generic_bad.php", line 7, characters 21-21:
A generic parameter cannot be used in the type of a static property (Typing[4279])
  File "static_property_generic_bad.php", line 7, characters 18-22:
  This is where the type of the static property was declared
  File "static_property_generic_bad.php", line 4, characters 7-7:
  This is the class containing the static property
File "static_property_generic_bad.php", line 6, characters 21-21:
A generic parameter cannot be used in the type of a static property (Typing[4279])
  File "static_property_generic_bad.php", line 6, characters 17-22:
  This is where the type of the static property was declared
  File "static_property_generic_bad.php", line 4, characters 7-7:
  This is the class containing the static property
File "static_property_generic_bad.php", line 11, characters 22-23:
A generic parameter cannot be used in the type of a static property (Typing[4279])
  File "static_property_generic_bad.php", line 11, characters 18-30:
  This is where the type of the static property was declared
  File "static_property_generic_bad.php", line 10, characters 7-20:
  This is the class containing the static property
